# python-discord-rpc

./: .gitignore  LICENSE  README.md  pyproject.toml  ruff.toml
.github/workflows/: code_analysis.yml  lint.yml  type_check_mypy.yml
pythonrpc/: __init__.py  discord_rpc.py
src/: Makefile  connection.h  connection_unix.c  discord_rpc.h  rpc_connection.c  rpc_connection.h  serialization.c  serialization.h
